--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,204 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
+	<main class="px-64">
+		<h1
+			class="text-7xl font-bold pt-4"
 		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			Patrones de arquitectura
+		</h1>
+		<h3
+			class="text-base text-gray-500 pb-2"
+		>
+			Creado por:
+			<strong>
+				Angelo Mandros
+			</strong>
+		</h3>
+		<p class="text-xl">
+			¿Alguna vez se preguntó cómo se diseñan los grandes sistemas empresariales? Antes de que comience un importante desarrollo de software, debemos elegir una arquitectura adecuada que nos proporcione la funcionalidad deseada y los atributos de calidad. Por lo tanto, debemos entender diferentes arquitecturas, antes de aplicarlas a nuestro diseño.
 		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+		<picture class="flex justify-center py-4">
+			<img 
+				alt="Patron de arquitectura" 
+				class="bh nl nm c" 
+				width="700" 
+				height="350"
+				loading="eager" 
+				role="presentation" 
+				src="https://miro.medium.com/v2/resize:fit:700/1*M22DR3WPqbWXWidYIq2GwA.png"
+			>
+		</picture>
+		<p class="text-xl py-2">
+			Los patrones de arquitectura son soluciones reutilizables para problemas comunes en el diseño de software. Estos patrones ayudan a los desarrolladores a crear sistemas más robustos y mantenibles.
+		</p>
+		<div class="flex justify-center text-white">
+			<div class="pulser my-12 flex justify-center items-center">
+				<svg class="h-32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M4 12.6111L8.92308 17.5L20 6.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+				</svg>
+			</div>
+		</div>
+		<p class="text-xl py-2">
+			Un ejemplo de patrón de arquitectura es el patrón MVC (Modelo-Vista-Controlador), que separa la lógica de negocio, la interfaz de usuario y el control de flujo en tres componentes distintos.
+		</p>
+		<picture class="flex justify-center py-4">
+			<img 
+				alt="Patron de arquitectura" 
+				class="patron bh nl nm c" 
+				width="700" 
+				height="350"
+				loading="eager" 
+				role="presentation" 
+				src="https://gustavopeiretti.com/patrones-de-diseno-que-debes-conocer/desing-pattern-types.jpg"
+			>
+		</picture>
+		<p class="text-xl py-2">
+			Otro patrón común es el patrón de Microservicios, que divide una aplicación en servicios pequeños e independientes que se comunican entre sí a través de APIs.
+		</p>
+		<div class="flex text-white">
+			<div class="demo my-12 flex justify-center items-center">
+				<svg class="w-12" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M4 12.6111L8.92308 17.5L20 6.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+				</svg>
+			</div>
+		</div>
+		<div class="flex justify-center my-4">
+			<div class="loader text-indigo-500 flex justify-center items-center">
+				<svg class="h-16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M13 3H8.2C7.0799 3 6.51984 3 6.09202 3.21799C5.71569 3.40973 5.40973 3.71569 5.21799 4.09202C5 4.51984 5 5.0799 5 6.2V17.8C5 18.9201 5 19.4802 5.21799 19.908C5.40973 20.2843 5.71569 20.5903 6.09202 20.782C6.51984 21 7.0799 21 8.2 21H12M13 3L19 9M13 3V7.4C13 7.96005 13 8.24008 13.109 8.45399C13.2049 8.64215 13.3578 8.79513 13.546 8.89101C13.7599 9 14.0399 9 14.6 9H19M19 9V11M9 17H11M9 13H13M9 9H10M19.2686 19.2686L21 21M20 17.5C20 18.8807 18.8807 20 17.5 20C16.1193 20 15 18.8807 15 17.5C15 16.1193 16.1193 15 17.5 15C18.8807 15 20 16.1193 20 17.5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+				</svg>
+			</div>
+		</div>
+		<div class="flex justify-center my-4 mb-12">
+			<div class="envio text-indigo-600 flex justify-center items-center">
+				<div class="reglon absolute h-2 w-12 top-0 left-0"></div>
+				<svg class="h-16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M18 7H18.01M15 7H15.01M18 17H18.01M15 17H15.01M6 10H18C18.9319 10 19.3978 10 19.7654 9.84776C20.2554 9.64477 20.6448 9.25542 20.8478 8.76537C21 8.39782 21 7.93188 21 7C21 6.06812 21 5.60218 20.8478 5.23463C20.6448 4.74458 20.2554 4.35523 19.7654 4.15224C19.3978 4 18.9319 4 18 4H6C5.06812 4 4.60218 4 4.23463 4.15224C3.74458 4.35523 3.35523 4.74458 3.15224 5.23463C3 5.60218 3 6.06812 3 7C3 7.93188 3 8.39782 3.15224 8.76537C3.35523 9.25542 3.74458 9.64477 4.23463 9.84776C4.60218 10 5.06812 10 6 10ZM6 20H18C18.9319 20 19.3978 20 19.7654 19.8478C20.2554 19.6448 20.6448 19.2554 20.8478 18.7654C21 18.3978 21 17.9319 21 17C21 16.0681 21 15.6022 20.8478 15.2346C20.6448 14.7446 20.2554 14.3552 19.7654 14.1522C19.3978 14 18.9319 14 18 14H6C5.06812 14 4.60218 14 4.23463 14.1522C3.74458 14.3552 3.35523 14.7446 3.15224 15.2346C3 15.6022 3 16.0681 3 17C3 17.9319 3 18.3978 3.15224 18.7654C3.35523 19.2554 3.74458 19.6448 4.23463 19.8478C4.60218 20 5.06812 20 6 20Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+				</svg>
+			</div>
+		</div>
 	</main>
 </Layout>
-
 <style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
+	.envio {
+		height: 100px;
+		width: 200px;
+		position: relative;
+		border: 5px solid #f3f3f3;
 	}
-	.astro-a {
+	.reglon {
+		transform-origin: left;
+		background-color: #3498db;
+		animation: move 2s linear infinite;
+	}
+	@keyframes move {
+		from {
+			transform: translateX(0%);
+		}
+		to {
+			transform: translateX(100%);
+		}
+	}
+	.loader::after {
+		animation: spin 2s linear infinite;
+	}
+	.loader {
+		width: 100px;
+		height: 100px;
+		
+		border-radius: 50%;
+		position: relative;
+	}
+	.loader::after {
+		content: '';
 		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
+		width: 100px;
+		height: 100px;
+		border-radius: 50%;
+		border: 10px solid #f3f3f3;
+		border-top: 10px solid #3498db;
+		border-radius: 50%;
+	}
+	@keyframes spin {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(360deg);
+		}
+	}
+	.patron {
+		animation: reveal linear forwards;
+		animation-timeline: view(10% 10%);
+	}
+	@keyframes reveal {
+		from {
+			opacity: 0;
+			clip-path: inset(45% 20% 45% 20%);
+		} 60% {
+			opacity: 1;
+			clip-path: inset(0% 0% 0% 0%);
+		}
+	}
+	.pulser {
+		width: 200px;
+		height: 200px;
+		background: rebeccapurple;
+		border-radius: 50%;
+		position: relative;
+	}
+	.pulser::after {
+		animation: pulse 1500ms cubic-bezier(0.9, 0.7, 0.5, 0.9) infinite;
+	}
+	@keyframes pulse {
+		0% {
+			opacity: 0;
+		}
+		50% {
+			transform: scale(1.4);
+			opacity: 0.4;
+		}
+	}
+
+	.pulser::after {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		background: blueviolet;
+		border-radius: 50%;
 		z-index: -1;
 	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
+	.demo {
+		animation: move;
+		animation-duration: 2s;
+		animation-iteration-count: infinite;
+		animation-direction: alternate;
 	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
+	
+	.demo:hover {
+		animation-play-state: paused;
 	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
+
+	@keyframes move {
+		from {
+			transform: translateX(0%);
+		}
+		to {
+			transform: translateX(100%);
+			background: powderblue;
+		}
 	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
+
+	/* presentational styles */
+	.demo {
+		width: 50px;
+		height: 50px;
+		background: royalblue;
 	}
 </style>
